Modification du titre et du texte

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<h1>Jasss</h1>
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 <head>
-<title>Page Title</title>
+  <meta charset="UTF-8">
+  <title>raise your yayaya</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+  <h1>Jasss</h1>
+  <h1>i'm learning to code</h1>
+  <p>helloooo.</p>
 
-</body>
-</html>
+  <h2>test de liens</h2>
+  <p>Voici
+<p>je teste les images maintenant</p>
+
+<img src="https://i.pinimg.com/736x/71/96/f1/7196f133eda0ae4f2b3554ad7f75d8a8.jpg">
