Modifications du site

--- a/index.html
+++ b/index.html
@@ -15,3 +15,4 @@
 <p>je teste les images maintenant</p>
 
 <img src="https://i.pinimg.com/736x/71/96/f1/7196f133eda0ae4f2b3554ad7f75d8a8.jpg">
+  </p> prout <p>
