Ajout de la page À propos

--- a/index.html
+++ b/index.html
@@ -2,17 +2,33 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>raise your yayaya</title>
+  <title>team conrad</title>
+  <link rel="icon" type="image/x-icon" href="https://static.wikia.nocookie.net/southpark/images/4/4b/Timmy.png/revision/latest?cb=20211214153025&path-prefix=fr">
 </head>
 <body>
+<style>
+
+body {
+  background-color: lightblue;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+  font-size : 30px;
+}
+
+p {
+  font-family: helvetica;
+  font-size: 12px;
+}
+
+</style>
 
   <h1>Jasss</h1>
-  <h1>i'm learning to code</h1>
   <p>helloooo.</p>
+  <a href="secondpage.html">seconde page</a>
 
-  <h2>test de liens</h2>
-  <p>Voici
-<p>je teste les images maintenant</p>
-
+ 
 <img src="https://i.pinimg.com/736x/71/96/f1/7196f133eda0ae4f2b3554ad7f75d8a8.jpg">
   <button><a href="https://letterboxd.com/jdmn/">je suis zinzin</a></button>
