--- a/secondpage.html
+++ b/secondpage.html
@@ -3,10 +3,92 @@
 <head>
   <meta charset="UTF-8">
   <title>seconde page</title>
+<style>
+ul {
+  list-style-type: none;
+  margin: 10;
+  padding: 0;
+  text-align: center;
+}
+
+li {
+  display: inline;
+}
+</style>
 </head>
 <body>
-  <h1>Whassaaaaap</h1>
-  <p>eh.</p>
-  <a href="index.html">Retour à l’accueil</a>
-</body>
-</html>
+<style>
+
+.header {
+  background-color: cadetblue;
+  padding: 15px;
+  text-align: center;
+
+}
+body {
+  background-color: lightblue;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+  font-size : 30px;
+  text-decoration: none;
+  font-family: helvetica;
+}
+h2 {
+  color: black;
+  text-align: left;
+  font-size : 20px;
+  text-decoration: none;
+  font-family: helvetica;
+}
+.topnav {
+  overflow: hidden;
+  background-color: #484f4f;
+  font-family: helvetica;
+}
+.topnav a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-family: helvetica;
+  font-size: 15px;
+}
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+  font-family: helvetica;
+}
+p {
+  font-family: helvetica;
+  font-size: 12px;
+}
+ul {
+  font-family: helvetica;
+  font-size: 12px;
+}
+</style>
+
+  <div class="header">
+  <h1>Jas Website</h1></div>
+  
+  <div class="topnav">
+  <a href="https://jasdmn13.web.app/">Home</a>
+  <a href="secondpage.html">Seconde Page</a>
+  <a href="#">(vide)</a></div>
+  
+  <h2>deuxième page. (site en construction)</h2>
+ 
+
+
+<ul>
+  <li><a href="https://jasdmn13.web.app/">Home</a></li>
+  <li><a href="secondpage.html">SecondePage</a></li>
+  <li><a href="https://letterboxd.com/jdmn/"target="_blank">Letterboxd</a></li>
+  <li><a href="https://letterboxd.com/jdmn/"target="_blank">Contact</a></li>
+
+</ul>
